@@ -6,17 +6,26 @@ import it.pagopa.pn.delivery.PnDeliveryConfigs;
 import it.pagopa.pn.delivery.exception.PnBadRequestException;
 import it.pagopa.pn.delivery.exception.PnNotFoundException;
 import it.pagopa.pn.delivery.exception.PnNotificationNotFoundException;
+import it.pagopa.pn.delivery.generated.openapi.server.v1.dto.NotificationDigitalAddress;
 import it.pagopa.pn.delivery.generated.openapi.server.v1.dto.*;
 import it.pagopa.pn.delivery.models.InputSearchNotificationDelegatedDto;
 import it.pagopa.pn.delivery.models.InputSearchNotificationDto;
 import it.pagopa.pn.delivery.models.InternalAuthHeader;
 import it.pagopa.pn.delivery.models.InternalNotification;
+import it.pagopa.pn.delivery.models.internal.notification.AttachmentDetails;
+import it.pagopa.pn.delivery.models.internal.notification.DelegateInfo;
+import it.pagopa.pn.delivery.models.internal.notification.NotificationPhysicalAddress;
+import it.pagopa.pn.delivery.models.internal.notification.NotificationRefusedError;
+import it.pagopa.pn.delivery.models.internal.notification.NotificationStatusHistoryElement;
+import it.pagopa.pn.delivery.models.internal.notification.SendingReceipt;
+import it.pagopa.pn.delivery.models.internal.notification.*;
 import it.pagopa.pn.delivery.svc.NotificationAttachmentService;
 import it.pagopa.pn.delivery.svc.NotificationAttachmentService.InternalAttachmentWithFileKey;
 import it.pagopa.pn.delivery.svc.NotificationQRService;
 import it.pagopa.pn.delivery.svc.search.NotificationRetrieverService;
 import it.pagopa.pn.delivery.utils.PnDeliveryRestConstants;
 import org.apache.commons.codec.digest.DigestUtils;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 import org.modelmapper.ModelMapper;
@@ -31,11 +40,16 @@ import org.springframework.util.Base64Utils;
 import reactor.core.publisher.Mono;
 
 import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
+import java.time.LocalDate;
+import java.time.LocalTime;
+import java.time.OffsetDateTime;
+import java.time.ZoneOffset;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
 import static it.pagopa.pn.delivery.exception.PnDeliveryExceptionCodes.ERROR_CODE_DELIVERY_FILEINFONOTFOUND;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.*;
 
 @WebFluxTest(controllers = {PnSentNotificationsController.class, PnReceivedNotificationsController.class})
@@ -96,7 +110,7 @@ class PnSentReceivedNotificationControllerTest {
 				
 		// Then		
 		webTestClient.get()
-			.uri( "/delivery/v2.0/notifications/sent/" + IUN  )
+			.uri( "/delivery/v2.1/notifications/sent/" + IUN  )
 			.accept( MediaType.ALL )
 			.header(HttpHeaders.ACCEPT, "application/json")
 			.header( PnDeliveryRestConstants.CX_ID_HEADER, PA_ID )
@@ -107,7 +121,7 @@ class PnSentReceivedNotificationControllerTest {
 			.exchange()
 			.expectStatus()
 			.isOk()
-			.expectBody(FullSentNotificationV20.class);
+			.expectBody(FullSentNotificationV21.class);
 		
 		Mockito.verify( svc ).getNotificationInformationWithSenderIdCheck(IUN, PA_ID, GROUPS);
 	}
@@ -123,7 +137,7 @@ class PnSentReceivedNotificationControllerTest {
 
 		// Then
 		webTestClient.get()
-				.uri( "/delivery/v2.0/notifications/sent/" + IUN  )
+				.uri( "/delivery/v2.1/notifications/sent/" + IUN  )
 				.accept( MediaType.ALL )
 				.header(HttpHeaders.ACCEPT, "application/json")
 				.header( PnDeliveryRestConstants.CX_ID_HEADER, PA_ID )
@@ -150,7 +164,7 @@ class PnSentReceivedNotificationControllerTest {
 
 		// Then
 		webTestClient.get()
-				.uri( "/delivery/v2.0/notifications/sent/" + IUN  )
+				.uri( "/delivery/v2.1/notifications/sent/" + IUN  )
 				.accept( MediaType.ALL )
 				.header(HttpHeaders.ACCEPT, "application/json")
 				.header( PnDeliveryRestConstants.CX_ID_HEADER, PA_ID )
@@ -177,7 +191,7 @@ class PnSentReceivedNotificationControllerTest {
 		webTestClient.get()
 				.uri(uriBuilder ->
 						uriBuilder
-								.path( "/delivery/requests" )
+								.path( "/delivery/v2.1/requests" )
 								.queryParam("notificationRequestId", REQUEST_ID)
 								.build())
 				.header( PnDeliveryRestConstants.CX_ID_HEADER, PA_ID )
@@ -188,22 +202,310 @@ class PnSentReceivedNotificationControllerTest {
 				.exchange()
 				.expectStatus()
 				.isOk()
-				.expectBody( NewNotificationRequestStatusResponse.class );
+				.expectBody( NewNotificationRequestStatusResponseV21.class );
 
 		Mockito.verify( svc ).getNotificationInformationWithSenderIdCheck( new String(Base64Utils.decodeFromString(REQUEST_ID), StandardCharsets.UTF_8), PA_ID, GROUPS );
 	}
 
 	@Test
+	void testTimeLine(){
+		TimelineElementDetails actualTimelineElementDetails = new TimelineElementDetails();
+		actualTimelineElementDetails.aarKey("Aar Key");
+		actualTimelineElementDetails.amount(10);
+		actualTimelineElementDetails.analogCost(1);
+		ArrayList<AttachmentDetails> attachments = new ArrayList<>();
+		actualTimelineElementDetails.attachments(attachments);
+		actualTimelineElementDetails
+				.attemptDate(OffsetDateTime.of(LocalDate.of(1970, 1, 1), LocalTime.MIDNIGHT, ZoneOffset.UTC));
+		actualTimelineElementDetails
+				.completionWorkflowDate(OffsetDateTime.of(LocalDate.of(1970, 1, 1), LocalTime.MIDNIGHT, ZoneOffset.UTC));
+		actualTimelineElementDetails.contactPhase(ContactPhase.CHOOSE_DELIVERY);
+		actualTimelineElementDetails.creditorTaxId("42");
+		DelegateInfo delegateInfo = new DelegateInfo("42", "42", "01234567-89AB-CDEF-FEDC-BA9876543210", "2020-03-01",
+				"Denomination", NotificationRecipientV21.RecipientTypeEnum.PF);
+
+		actualTimelineElementDetails.delegateInfo(delegateInfo);
+		actualTimelineElementDetails.deliveryDetailCode("Delivery Detail Code");
+		actualTimelineElementDetails.deliveryFailureCause("Delivery Failure Cause");
+		actualTimelineElementDetails.deliveryMode(DeliveryMode.DIGITAL);
+		it.pagopa.pn.delivery.models.internal.notification.NotificationDigitalAddress digitalAddress = new it.pagopa.pn.delivery.models.internal.notification.NotificationDigitalAddress(
+				it.pagopa.pn.delivery.generated.openapi.server.v1.dto.NotificationDigitalAddress.TypeEnum.PEC, "42 Main St");
+
+		actualTimelineElementDetails.digitalAddress(digitalAddress);
+		actualTimelineElementDetails.digitalAddressSource(DigitalAddressSource.PLATFORM);
+		actualTimelineElementDetails.endWorkflowStatus(EndWorkflowStatus.SUCCESS);
+		actualTimelineElementDetails.envelopeWeight(3);
+		actualTimelineElementDetails
+				.eventTimestamp(OffsetDateTime.of(LocalDate.of(1970, 1, 1), LocalTime.MIDNIGHT, ZoneOffset.UTC));
+		actualTimelineElementDetails.generatedAarUrl("https://example.org/example");
+		actualTimelineElementDetails.idF24("Id F24");
+		actualTimelineElementDetails.ioSendMessageResult(IoSendMessageResult.NOT_SENT_OPTIN_ALREADY_SENT);
+		actualTimelineElementDetails
+				.lastAttemptDate(OffsetDateTime.of(LocalDate.of(1970, 1, 1), LocalTime.MIDNIGHT, ZoneOffset.UTC));
+		actualTimelineElementDetails
+				.legalFactGenerationDate(OffsetDateTime.of(LocalDate.of(1970, 1, 1), LocalTime.MIDNIGHT, ZoneOffset.UTC));
+		actualTimelineElementDetails.legalFactId("42");
+		actualTimelineElementDetails.legalfactId("42");
+		NotificationPhysicalAddress newAddress = new NotificationPhysicalAddress("At", "42 Main St", "42 Main St", "21654",
+				"Municipality", "Municipality Details", "Province", "Foreign State");
+
+		actualTimelineElementDetails.newAddress(newAddress);
+		actualTimelineElementDetails.nextDigitalAddressSource(DigitalAddressSource.PLATFORM);
+		actualTimelineElementDetails
+				.nextLastAttemptMadeForSource(OffsetDateTime.of(LocalDate.of(1970, 1, 1), LocalTime.MIDNIGHT, ZoneOffset.UTC));
+		actualTimelineElementDetails.nextSourceAttemptsMade(1);
+		NotificationPhysicalAddress normalizedAddress = new NotificationPhysicalAddress("At", "42 Main St", "42 Main St",
+				"21654", "Municipality", "Municipality Details", "Province", "Foreign State");
+
+		actualTimelineElementDetails.normalizedAddress(normalizedAddress);
+		actualTimelineElementDetails.noticeCode("Notice Code");
+		actualTimelineElementDetails.notificationCost(1L);
+		actualTimelineElementDetails
+				.notificationDate(OffsetDateTime.of(LocalDate.of(1970, 1, 1), LocalTime.MIDNIGHT, ZoneOffset.UTC));
+		actualTimelineElementDetails.numberOfPages(10);
+		NotificationPhysicalAddress oldAddress = new NotificationPhysicalAddress("At", "42 Main St", "42 Main St", "21654",
+				"Municipality", "Municipality Details", "Province", "Foreign State");
+
+		actualTimelineElementDetails.oldAddress(oldAddress);
+		actualTimelineElementDetails.paymentSourceChannel("Payment Source Channel");
+		NotificationPhysicalAddress physicalAddress = new NotificationPhysicalAddress("At", "42 Main St", "42 Main St",
+				"21654", "Municipality", "Municipality Details", "Province", "Foreign State");
+
+		actualTimelineElementDetails.physicalAddress(physicalAddress);
+		actualTimelineElementDetails.prepareRequestId("42");
+		actualTimelineElementDetails.productType("Product Type");
+		actualTimelineElementDetails.raddTransactionId("42");
+		actualTimelineElementDetails.raddType("Radd Type");
+		actualTimelineElementDetails.reason("Just cause");
+		actualTimelineElementDetails.reasonCode("Just cause");
+		actualTimelineElementDetails.recIndex(1);
+		actualTimelineElementDetails.recipientType(NotificationRecipientV21.RecipientTypeEnum.PF);
+		ArrayList<NotificationRefusedError> refusalReasons = new ArrayList<>();
+		actualTimelineElementDetails.refusalReasons(refusalReasons);
+		actualTimelineElementDetails.registeredLetterCode("Registered Letter Code");
+		actualTimelineElementDetails.relatedRequestId("42");
+		actualTimelineElementDetails.responseStatus(ResponseStatus.OK);
+		actualTimelineElementDetails.retryNumber(10);
+		actualTimelineElementDetails
+				.schedulingAnalogDate(OffsetDateTime.of(LocalDate.of(1970, 1, 1), LocalTime.MIDNIGHT, ZoneOffset.UTC));
+		actualTimelineElementDetails
+				.schedulingDate(OffsetDateTime.of(LocalDate.of(1970, 1, 1), LocalTime.MIDNIGHT, ZoneOffset.UTC));
+		actualTimelineElementDetails
+				.sendDate(OffsetDateTime.of(LocalDate.of(1970, 1, 1), LocalTime.MIDNIGHT, ZoneOffset.UTC));
+		actualTimelineElementDetails.sendRequestId("42");
+		ArrayList<SendingReceipt> sendingReceipts = new ArrayList<>();
+		actualTimelineElementDetails.sendingReceipts(sendingReceipts);
+		actualTimelineElementDetails.sentAttemptMade(1);
+		actualTimelineElementDetails.serviceLevel(ServiceLevel.AR_REGISTERED_LETTER);
+		actualTimelineElementDetails.setAarKey("Aar Key");
+		actualTimelineElementDetails.setAmount(10);
+		actualTimelineElementDetails.setAnalogCost(1);
+		ArrayList<AttachmentDetails> attachments2 = new ArrayList<>();
+		actualTimelineElementDetails.setAttachments(attachments2);
+		OffsetDateTime attemptDate = OffsetDateTime.of(LocalDate.of(1970, 1, 1), LocalTime.MIDNIGHT, ZoneOffset.UTC);
+		actualTimelineElementDetails.setAttemptDate(attemptDate);
+		OffsetDateTime completionWorkflowDate = OffsetDateTime.of(LocalDate.of(1970, 1, 1), LocalTime.MIDNIGHT,
+				ZoneOffset.UTC);
+		actualTimelineElementDetails.setCompletionWorkflowDate(completionWorkflowDate);
+		actualTimelineElementDetails.setContactPhase(ContactPhase.CHOOSE_DELIVERY);
+		actualTimelineElementDetails.setCreditorTaxId("42");
+		DelegateInfo delegateInfo2 = new DelegateInfo("42", "42", "01234567-89AB-CDEF-FEDC-BA9876543210", "2020-03-01",
+				"Denomination", NotificationRecipientV21.RecipientTypeEnum.PF);
+
+		actualTimelineElementDetails.setDelegateInfo(delegateInfo2);
+		actualTimelineElementDetails.setDeliveryDetailCode("Delivery Detail Code");
+		actualTimelineElementDetails.setDeliveryFailureCause("Delivery Failure Cause");
+		actualTimelineElementDetails.setDeliveryMode(DeliveryMode.DIGITAL);
+		it.pagopa.pn.delivery.models.internal.notification.NotificationDigitalAddress digitalAddress2 = new it.pagopa.pn.delivery.models.internal.notification.NotificationDigitalAddress(
+				it.pagopa.pn.delivery.generated.openapi.server.v1.dto.NotificationDigitalAddress.TypeEnum.PEC, "42 Main St");
+
+		actualTimelineElementDetails.setDigitalAddress(digitalAddress2);
+		actualTimelineElementDetails.setDigitalAddressSource(DigitalAddressSource.PLATFORM);
+		actualTimelineElementDetails.setEndWorkflowStatus(EndWorkflowStatus.SUCCESS);
+		actualTimelineElementDetails.setEnvelopeWeight(3);
+		OffsetDateTime eventTimestamp = OffsetDateTime.of(LocalDate.of(1970, 1, 1), LocalTime.MIDNIGHT, ZoneOffset.UTC);
+		actualTimelineElementDetails.setEventTimestamp(eventTimestamp);
+		actualTimelineElementDetails.setGeneratedAarUrl("https://example.org/example");
+		actualTimelineElementDetails.setIdF24("Id F24");
+		actualTimelineElementDetails.setIoSendMessageResult(IoSendMessageResult.NOT_SENT_OPTIN_ALREADY_SENT);
+		actualTimelineElementDetails.setIsAvailable(true);
+		OffsetDateTime lastAttemptDate = OffsetDateTime.of(LocalDate.of(1970, 1, 1), LocalTime.MIDNIGHT, ZoneOffset.UTC);
+		actualTimelineElementDetails.setLastAttemptDate(lastAttemptDate);
+		OffsetDateTime legalFactGenerationDate = OffsetDateTime.of(LocalDate.of(1970, 1, 1), LocalTime.MIDNIGHT,
+				ZoneOffset.UTC);
+		actualTimelineElementDetails.setLegalFactGenerationDate(legalFactGenerationDate);
+		actualTimelineElementDetails.setLegalFactId("42");
+		actualTimelineElementDetails.setLegalfactId("42");
+		NotificationPhysicalAddress newAddress2 = new NotificationPhysicalAddress("At", "42 Main St", "42 Main St", "21654",
+				"Municipality", "Municipality Details", "Province", "Foreign State");
+
+		actualTimelineElementDetails.setNewAddress(newAddress2);
+		actualTimelineElementDetails.setNextDigitalAddressSource(DigitalAddressSource.PLATFORM);
+		OffsetDateTime nextLastAttemptMadeForSource = OffsetDateTime.of(LocalDate.of(1970, 1, 1), LocalTime.MIDNIGHT,
+				ZoneOffset.UTC);
+		actualTimelineElementDetails.setNextLastAttemptMadeForSource(nextLastAttemptMadeForSource);
+		actualTimelineElementDetails.setNextSourceAttemptsMade(1);
+		NotificationPhysicalAddress normalizedAddress2 = new NotificationPhysicalAddress("At", "42 Main St", "42 Main St",
+				"21654", "Municipality", "Municipality Details", "Province", "Foreign State");
+
+		actualTimelineElementDetails.setNormalizedAddress(normalizedAddress2);
+		actualTimelineElementDetails.setNoticeCode("Notice Code");
+		actualTimelineElementDetails.setNotificationCost(1L);
+		OffsetDateTime notificationDate = OffsetDateTime.of(LocalDate.of(1970, 1, 1), LocalTime.MIDNIGHT, ZoneOffset.UTC);
+		actualTimelineElementDetails.setNotificationDate(notificationDate);
+		actualTimelineElementDetails.setNotificationPhysicalAddress(new NotificationPhysicalAddress("At", "42 Main St",
+				"42 Main St", "21654", "Municipality", "Municipality Details", "Province", "Foreign State"));
+		actualTimelineElementDetails.setNumberOfPages(10);
+		NotificationPhysicalAddress oldAddress2 = new NotificationPhysicalAddress("At", "42 Main St", "42 Main St", "21654",
+				"Municipality", "Municipality Details", "Province", "Foreign State");
+
+		actualTimelineElementDetails.setOldAddress(oldAddress2);
+		actualTimelineElementDetails.setPaymentSourceChannel("Payment Source Channel");
+		actualTimelineElementDetails.setPrepareRequestId("42");
+		actualTimelineElementDetails.setProductType("Product Type");
+		actualTimelineElementDetails.setRaddTransactionId("42");
+		actualTimelineElementDetails.setRaddType("Radd Type");
+		actualTimelineElementDetails.setReason("Just cause");
+		actualTimelineElementDetails.setReasonCode("Just cause");
+		actualTimelineElementDetails.setRecIndex(1);
+		actualTimelineElementDetails.setRecipientType(NotificationRecipientV21.RecipientTypeEnum.PF);
+		ArrayList<NotificationRefusedError> refusalReasons2 = new ArrayList<>();
+		actualTimelineElementDetails.setRefusalReasons(refusalReasons2);
+		actualTimelineElementDetails.setRegisteredLetterCode("Registered Letter Code");
+		actualTimelineElementDetails.setRelatedRequestId("42");
+		actualTimelineElementDetails.setResponseStatus(ResponseStatus.OK);
+		actualTimelineElementDetails.setRetryNumber(10);
+		actualTimelineElementDetails
+				.setSchedulingAnalogDate(OffsetDateTime.of(LocalDate.of(1970, 1, 1), LocalTime.MIDNIGHT, ZoneOffset.UTC));
+		actualTimelineElementDetails
+				.setSchedulingDate(OffsetDateTime.of(LocalDate.of(1970, 1, 1), LocalTime.MIDNIGHT, ZoneOffset.UTC));
+		actualTimelineElementDetails
+				.setSendDate(OffsetDateTime.of(LocalDate.of(1970, 1, 1), LocalTime.MIDNIGHT, ZoneOffset.UTC));
+		actualTimelineElementDetails.setSendRequestId("42");
+		ArrayList<SendingReceipt> sendingReceipts2 = new ArrayList<>();
+		actualTimelineElementDetails.setSendingReceipts(sendingReceipts2);
+		actualTimelineElementDetails.setSentAttemptMade(1);
+		actualTimelineElementDetails.setServiceLevel(ServiceLevel.AR_REGISTERED_LETTER);
+		actualTimelineElementDetails.setShouldRetry(true);
+		actualTimelineElementDetails.setUncertainPaymentDate(true);
+		actualTimelineElementDetails.shouldRetry(true);
+		actualTimelineElementDetails.uncertainPaymentDate(true);
+		testingTimeLine(actualTimelineElementDetails);
+		testingTimeLine1(actualTimelineElementDetails);
+		testingTimeLine2(actualTimelineElementDetails);
+		testingTimeLine3(actualTimelineElementDetails);
+	}
+
+	void testingTimeLine3(TimelineElementDetails actualTimelineElementDetails){
+		assertNotNull(actualTimelineElementDetails.getLegalFactGenerationDate());
+		assertEquals("42", actualTimelineElementDetails.getLegalFactId());
+		assertEquals("42", actualTimelineElementDetails.getLegalfactId());
+		NotificationPhysicalAddress newAddress3 = actualTimelineElementDetails.getNewAddress();
+		NotificationPhysicalAddress normalizedAddress3 = actualTimelineElementDetails.getNormalizedAddress();
+		assertEquals(normalizedAddress3, newAddress3);
+		NotificationPhysicalAddress oldAddress3 = actualTimelineElementDetails.getOldAddress();
+		assertEquals(oldAddress3, newAddress3);
+		NotificationPhysicalAddress physicalAddress2 = actualTimelineElementDetails.getPhysicalAddress();
+		assertEquals(physicalAddress2, newAddress3);
+		assertEquals(DigitalAddressSource.PLATFORM, actualTimelineElementDetails.getNextDigitalAddressSource());
+		assertNotNull(actualTimelineElementDetails.getNextLastAttemptMadeForSource());
+		assertEquals(1, actualTimelineElementDetails.getNextSourceAttemptsMade().intValue());
+		assertEquals(oldAddress3, normalizedAddress3);
+		assertEquals(physicalAddress2, normalizedAddress3);
+		assertEquals(1L, actualTimelineElementDetails.getNotificationCost().longValue());
+		assertNotNull(actualTimelineElementDetails.getNotificationDate());
+		assertSame(physicalAddress2, actualTimelineElementDetails.getNotificationPhysicalAddress());
+		assertEquals(10, actualTimelineElementDetails.getNumberOfPages().intValue());
+		assertEquals(physicalAddress2, oldAddress3);
+		assertEquals("Payment Source Channel", actualTimelineElementDetails.getPaymentSourceChannel());
+		assertEquals("42", actualTimelineElementDetails.getPrepareRequestId());
+		assertEquals("Product Type", actualTimelineElementDetails.getProductType());
+		assertEquals("42", actualTimelineElementDetails.getRaddTransactionId());
+		assertEquals("Radd Type", actualTimelineElementDetails.getRaddType());
+		assertEquals("Just cause", actualTimelineElementDetails.getReason());
+		assertEquals("Just cause", actualTimelineElementDetails.getReasonCode());
+		assertEquals(1, actualTimelineElementDetails.getRecIndex().intValue());
+		assertEquals(NotificationRecipientV21.RecipientTypeEnum.PF, actualTimelineElementDetails.getRecipientType());
+	}
+
+	void testingTimeLine2(TimelineElementDetails actualTimelineElementDetails){
+		assertEquals("Aar Key", actualTimelineElementDetails.getAarKey());
+		assertEquals(10, actualTimelineElementDetails.getAmount().intValue());
+		assertEquals(1, actualTimelineElementDetails.getAnalogCost().intValue());
+		assertNotNull(actualTimelineElementDetails.getAttemptDate());
+		assertNotNull(actualTimelineElementDetails.getCompletionWorkflowDate());
+		assertEquals(ContactPhase.CHOOSE_DELIVERY, actualTimelineElementDetails.getContactPhase());
+		assertEquals("42", actualTimelineElementDetails.getCreditorTaxId());
+		assertEquals("Delivery Detail Code", actualTimelineElementDetails.getDeliveryDetailCode());
+		assertEquals("Delivery Failure Cause", actualTimelineElementDetails.getDeliveryFailureCause());
+		assertEquals(DeliveryMode.DIGITAL, actualTimelineElementDetails.getDeliveryMode());
+		it.pagopa.pn.delivery.models.internal.notification.NotificationDigitalAddress digitalAddress3 = actualTimelineElementDetails.getDigitalAddress();
+		assertEquals(DigitalAddressSource.PLATFORM, actualTimelineElementDetails.getDigitalAddressSource());
+		assertEquals(EndWorkflowStatus.SUCCESS, actualTimelineElementDetails.getEndWorkflowStatus());
+		assertEquals(3, actualTimelineElementDetails.getEnvelopeWeight().intValue());
+		assertNotNull(actualTimelineElementDetails.getEventTimestamp());
+		assertEquals("https://example.org/example", actualTimelineElementDetails.getGeneratedAarUrl());
+		assertEquals("Id F24", actualTimelineElementDetails.getIdF24());
+		assertEquals(IoSendMessageResult.NOT_SENT_OPTIN_ALREADY_SENT,
+				actualTimelineElementDetails.getIoSendMessageResult());
+		assertTrue(actualTimelineElementDetails.getIsAvailable());
+		assertNotNull(actualTimelineElementDetails.getLastAttemptDate());
+		assertEquals("Registered Letter Code", actualTimelineElementDetails.getRegisteredLetterCode());
+		assertEquals("42", actualTimelineElementDetails.getRelatedRequestId());
+		TimelineElementDetails actualIsAvailableResult = actualTimelineElementDetails.isAvailable(true);
+		assertSame(actualTimelineElementDetails, actualIsAvailableResult);
+		assertEquals("Notice Code", actualTimelineElementDetails.getNoticeCode());
+	}
+
+	void testingTimeLine1(TimelineElementDetails timelineElementDetails){
+		Assertions.assertNotNull(timelineElementDetails.getLegalFactId());
+		Assertions.assertNotNull(timelineElementDetails.getNormalizedAddress());
+		Assertions.assertNotNull(timelineElementDetails.getGeneratedAarUrl());
+		Assertions.assertNotNull(timelineElementDetails.getPhysicalAddress());
+		Assertions.assertNotNull(timelineElementDetails.getLegalfactId());
+		Assertions.assertNotNull(timelineElementDetails.getEndWorkflowStatus());
+		Assertions.assertNotNull(timelineElementDetails.getCompletionWorkflowDate());
+		Assertions.assertNotNull(timelineElementDetails.getLegalFactGenerationDate());
+		Assertions.assertNotNull(timelineElementDetails.getDigitalAddress());
+		Assertions.assertNotNull(timelineElementDetails.getDigitalAddressSource());
+		Assertions.assertNotNull(timelineElementDetails.getIsAvailable());
+		Assertions.assertNotNull(timelineElementDetails.getAttemptDate());
+		Assertions.assertNotNull(timelineElementDetails.getEventTimestamp());
+		Assertions.assertNotNull(timelineElementDetails.getRaddType());
+		Assertions.assertNotNull(timelineElementDetails.getRaddTransactionId());
+	}
+
+	void testingTimeLine(TimelineElementDetails timelineElementDetails){
+		Assertions.assertNotNull(timelineElementDetails.getResponseStatus());
+		Assertions.assertNotNull(timelineElementDetails.getNextLastAttemptMadeForSource());
+		Assertions.assertNotNull(timelineElementDetails.getNextSourceAttemptsMade());
+		Assertions.assertNotNull(timelineElementDetails.getNextDigitalAddressSource());
+		Assertions.assertNotNull(timelineElementDetails.getRetryNumber());
+		Assertions.assertNotNull(timelineElementDetails.getIoSendMessageResult());
+		Assertions.assertNotNull(timelineElementDetails.getSchedulingDate());
+		Assertions.assertNotNull(timelineElementDetails.getLastAttemptDate());
+		Assertions.assertNotNull(timelineElementDetails.getRefusalReasons());
+		Assertions.assertNotNull(timelineElementDetails.getSendDate());
+		Assertions.assertNotNull(timelineElementDetails.getSentAttemptMade());
+		Assertions.assertNotNull(timelineElementDetails.getContactPhase());
+		Assertions.assertNotNull(timelineElementDetails.getDeliveryMode());
+		Assertions.assertNotNull(timelineElementDetails.getNotificationCost());
+		Assertions.assertNotNull(timelineElementDetails.getDelegateInfo());
+		Assertions.assertNotNull(timelineElementDetails.getOldAddress());
+	}
+
+	@Test
 	void getNotificationRequestStatusByRequestIdREFUSED() {
 		// Given
+
 		InternalNotification notification = newNotification();
 		notification.setNotificationStatusHistory( Collections.singletonList( NotificationStatusHistoryElement.builder()
 						.status( NotificationStatus.REFUSED )
 				.build() ) );
-		notification.setTimeline( Collections.singletonList( TimelineElementV20.builder()
+		notification.setTimeline( Collections.singletonList( TimelineElement.builder()
 						.category( TimelineElementCategoryV20.REQUEST_REFUSED )
-						.details( TimelineElementDetailsV20.builder()
-								.refusalReasons( Collections.singletonList( NotificationRefusedError.builder()
+						.details( TimelineElementDetails.builder()
+								.refusalReasons( Collections.singletonList( it.pagopa.pn.delivery.models.internal.notification.NotificationRefusedError.builder()
 												.errorCode( "FILE_NOTFOUND" )
 												.detail( "Allegato non trovato. fileKey=81dde2a8-9719-4407-b7b3-63e7ea694869" )
 										.build() ) )
@@ -215,7 +517,7 @@ class PnSentReceivedNotificationControllerTest {
 		webTestClient.get()
 				.uri(uriBuilder ->
 						uriBuilder
-								.path( "/delivery/requests" )
+								.path( "/delivery/v2.1/requests" )
 								.queryParam("notificationRequestId", REQUEST_ID)
 								.build())
 				.header( PnDeliveryRestConstants.CX_ID_HEADER, PA_ID )
@@ -226,7 +528,7 @@ class PnSentReceivedNotificationControllerTest {
 				.exchange()
 				.expectStatus()
 				.isOk()
-				.expectBody( NewNotificationRequestStatusResponse.class );
+				.expectBody( NewNotificationRequestStatusResponseV21.class );
 
 		Mockito.verify( svc ).getNotificationInformationWithSenderIdCheck( new String(Base64Utils.decodeFromString(REQUEST_ID), StandardCharsets.UTF_8), PA_ID, GROUPS );
 	}
@@ -241,7 +543,7 @@ class PnSentReceivedNotificationControllerTest {
 		webTestClient.get()
 				.uri(uriBuilder ->
 						uriBuilder
-								.path( "/delivery/requests" )
+								.path( "/delivery/v2.1/requests" )
 								.queryParam("notificationRequestId", REQUEST_ID)
 								.build())
 				.header( PnDeliveryRestConstants.CX_ID_HEADER, PA_ID )
@@ -252,7 +554,7 @@ class PnSentReceivedNotificationControllerTest {
 				.exchange()
 				.expectStatus()
 				.isOk()
-				.expectBody( NewNotificationRequestStatusResponse.class );
+				.expectBody( NewNotificationRequestStatusResponseV21.class );
 
 		Mockito.verify( svc ).getNotificationInformationWithSenderIdCheck( new String(Base64Utils.decodeFromString(REQUEST_ID), StandardCharsets.UTF_8), PA_ID, GROUPS );
 	}
@@ -262,7 +564,7 @@ class PnSentReceivedNotificationControllerTest {
 		webTestClient.get()
 				.uri(uriBuilder ->
 						uriBuilder
-								.path( "/delivery/requests" )
+								.path( "/delivery/v2.1/requests" )
 								.queryParam("paProtocolNumber", PA_PROTOCOL_NUMBER)
 								.build())
 				.header( PnDeliveryRestConstants.CX_ID_HEADER, PA_ID )
@@ -279,7 +581,7 @@ class PnSentReceivedNotificationControllerTest {
 		webTestClient.get()
 				.uri(uriBuilder ->
 						uriBuilder
-								.path( "/delivery/requests" )
+								.path( "/delivery/v2.1/requests" )
 								.build())
 				.header( PnDeliveryRestConstants.CX_ID_HEADER, PA_ID )
 				.header(PnDeliveryRestConstants.UID_HEADER, "asdasd")
@@ -300,7 +602,7 @@ class PnSentReceivedNotificationControllerTest {
 		webTestClient.get()
 				.uri(uriBuilder ->
 						uriBuilder
-								.path( "/delivery/requests" )
+								.path( "/delivery/v2.1/requests" )
 								.queryParam("paProtocolNumber", PA_PROTOCOL_NUMBER)
 								.queryParam( "idempotenceToken", IDEMPOTENCE_TOKEN )
 								.build())
@@ -312,7 +614,7 @@ class PnSentReceivedNotificationControllerTest {
 				.exchange()
 				.expectStatus()
 				.isOk()
-				.expectBody( NewNotificationRequestStatusResponse.class );
+				.expectBody( NewNotificationRequestStatusResponseV21.class );
 
 		Mockito.verify( svc ).getNotificationInformation( PA_ID, PA_PROTOCOL_NUMBER, IDEMPOTENCE_TOKEN, GROUPS );
 	}
@@ -329,7 +631,7 @@ class PnSentReceivedNotificationControllerTest {
 
 		// Then
 		webTestClient.get()
-				.uri( "/delivery/notifications/received/" + IUN  )
+				.uri( "/delivery/v2.1/notifications/received/" + IUN  )
 				.accept( MediaType.ALL )
 				.header(HttpHeaders.ACCEPT, "application/json")
 				.header( PnDeliveryRestConstants.CX_ID_HEADER, CX_ID)
@@ -339,7 +641,7 @@ class PnSentReceivedNotificationControllerTest {
 				.exchange()
 				.expectStatus()
 				.isOk()
-				.expectBody(FullReceivedNotification.class);
+				.expectBody(FullReceivedNotificationV21.class);
 
 		Mockito.verify(svc).getNotificationAndNotifyViewedEvent(IUN, internalAuthHeader, null);
 	}
@@ -379,7 +681,7 @@ class PnSentReceivedNotificationControllerTest {
 		webTestClient.get()
 				.uri(uriBuilder ->
 						uriBuilder
-								.path( "/delivery/notifications/received/" + IUN )
+								.path( "/delivery/v2.1/notifications/received/" + IUN )
 								.queryParam("mandateId", MANDATE_ID)
 								.build())
 				.accept( MediaType.ALL )
@@ -391,7 +693,7 @@ class PnSentReceivedNotificationControllerTest {
 				.exchange()
 				.expectStatus()
 				.isOk()
-				.expectBody(FullReceivedNotification.class);
+				.expectBody(FullReceivedNotificationV21.class);
 
 		Mockito.verify(svc).getNotificationAndNotifyViewedEvent(IUN, internalAuthHeader, MANDATE_ID);
 	}
@@ -588,7 +890,7 @@ class PnSentReceivedNotificationControllerTest {
 				.expectStatus()
 				.isOk();
 
-		Mockito.verify( attachmentService ).downloadAttachmentWithRedirectWithFileKey( IUN, internalAuthHeader, null,  0, PAGOPA, false);
+		Mockito.verify( attachmentService ).downloadAttachmentWithRedirectWithFileKey( IUN, internalAuthHeader, null,  0, PAGOPA, null,false);
 	}
 
 	@Test
@@ -627,7 +929,7 @@ class PnSentReceivedNotificationControllerTest {
 				.expectStatus()
 				.isOk();
 
-		Mockito.verify( attachmentService ).downloadAttachmentWithRedirectWithFileKey( IUN, internalAuthHeader, null,  0, PAGOPA, false);
+		Mockito.verify( attachmentService ).downloadAttachmentWithRedirectWithFileKey( IUN, internalAuthHeader, null,  0, PAGOPA, null,false);
 	}
 
 	@Test
@@ -635,7 +937,7 @@ class PnSentReceivedNotificationControllerTest {
 		// When
 		Mockito.doThrow( new PnNotificationNotFoundException("Simulated Error") )
 				.when( attachmentService )
-				.downloadAttachmentWithRedirectWithFileKey( IUN, new InternalAuthHeader(CX_TYPE_PF, PA_ID, UID, List.of("asdasd")), null, 0, PAGOPA, false );
+				.downloadAttachmentWithRedirectWithFileKey( IUN, new InternalAuthHeader(CX_TYPE_PF, PA_ID, UID, List.of("asdasd")), null, 0, PAGOPA, null,false );
 
 		webTestClient.get()
 				.uri( "/delivery/notifications/sent/{iun}/attachments/payment/{recipientIdx}/{attachmentName}".replace("{iun}",IUN).replace("{recipientIdx}","0").replace("{attachmentName}",PAGOPA))
@@ -990,56 +1292,36 @@ class PnSentReceivedNotificationControllerTest {
 	}
 
 	private InternalNotification newNotification() {
-		return new InternalNotification(FullSentNotificationV20.builder()
-				.iun("IUN_01")
-				.paProtocolNumber("protocol_01")
-				.subject("Subject 01")
-				.cancelledByIun("IUN_05")
-				.cancelledIun("IUN_00")
-				.senderPaId( PA_ID )
-				.notificationStatus( NotificationStatus.ACCEPTED )
-				.recipients( Collections.singletonList(
+		InternalNotification internalNotification = new InternalNotification();
+		internalNotification.setSourceChannel(X_PAGOPA_PN_SRC_CH);
+		internalNotification.setSentAt(OffsetDateTime.now());
+		internalNotification.setRecipients(
+				List.of(
 						NotificationRecipient.builder()
-								.taxId("Codice Fiscale 01")
-								.denomination("Nome Cognome/Ragione Sociale")
-								.internalId( "recipientInternalId" )
-								.digitalDomicile(NotificationDigitalAddress.builder()
-										.type( NotificationDigitalAddress.TypeEnum.PEC )
-										.address("account@dominio.it")
-										.build())
-								.build()
-				))
-				.documents(Arrays.asList(
-						NotificationDocument.builder()
-								.ref( NotificationAttachmentBodyRef.builder()
-										.key("doc00")
-										.versionToken("v01_doc00")
-										.build()
-								)
-								.digests(NotificationAttachmentDigests.builder()
-										.sha256("sha256_doc00")
-										.build()
-								)
-								.build(),
-						NotificationDocument.builder()
-								.ref( NotificationAttachmentBodyRef.builder()
-										.key("doc01")
-										.versionToken("v01_doc01")
-										.build()
-								)
-								.digests(NotificationAttachmentDigests.builder()
-										.sha256("sha256_doc01")
-										.build()
-								)
-								.build()
-				))
-				.timeline( Collections.singletonList(TimelineElementV20.builder().build()))
-				.notificationStatusHistory( Collections.singletonList( NotificationStatusHistoryElement.builder()
-						.status( NotificationStatus.ACCEPTED )
-						.build() ) )
-				.sourceChannel(X_PAGOPA_PN_SRC_CH)
-				.recipientIds(Collections.emptyList())
-				.build());
+								.internalId("internalId")
+								.recipientType(NotificationRecipientV21.RecipientTypeEnum.PF)
+								.taxId("taxId")
+								.physicalAddress(it.pagopa.pn.delivery.models.internal.notification.NotificationPhysicalAddress.builder().build())
+								.digitalDomicile(it.pagopa.pn.delivery.models.internal.notification.NotificationDigitalAddress.builder().build())
+								.payments(List.of(NotificationPaymentInfo.builder().build()))
+								.build()));
+		internalNotification.setIun("IUN_01");
+		internalNotification.setPaProtocolNumber("protocol_01");
+		internalNotification.setSubject("Subject 01");
+		internalNotification.setCancelledIun("IUN_05");
+		internalNotification.setCancelledIun("IUN_00");
+		internalNotification.setSenderPaId("PA_ID");
+		internalNotification.setNotificationStatus(NotificationStatus.ACCEPTED);
+		internalNotification.setRecipients(Collections.singletonList(
+				NotificationRecipient.builder()
+						.taxId("Codice Fiscale 01")
+						.denomination("Nome Cognome/Ragione Sociale")
+						.internalId( "recipientInternalId" )
+						.digitalDomicile(it.pagopa.pn.delivery.models.internal.notification.NotificationDigitalAddress.builder()
+								.type( NotificationDigitalAddress.TypeEnum.PEC )
+								.address("account@dominio.it")
+								.build()).build()));
+		return internalNotification;
 	}
 	@Test
 	void searchNotificationDelegatedFailure() {
@@ -1096,12 +1378,8 @@ class PnSentReceivedNotificationControllerTest {
 
 	@Test
 	void getReceivedNotificationDocumentWithNotificationCancelledTest() {
-		Mockito.doThrow(new PnNotificationNotFoundException("Notification with iun: a-iun has a request for cancellation"))
-				.when(svc)
-				.checkIfNotificationIsNotCancelled(IUN);
-
 		webTestClient.get()
-				.uri("/delivery/notifications/received/{iun}/attachments/documents/{docIdx}", IUN, 1)
+				.uri("/delivery/v2.1/notifications/received/{iun}/attachments/documents/{docIdx}", IUN, 1)
 				.header( PnDeliveryRestConstants.CX_ID_HEADER, RECIPIENT_ID)
 				.header(PnDeliveryRestConstants.UID_HEADER, UID)
 				.header(PnDeliveryRestConstants.CX_TYPE_HEADER, "PF")
@@ -1109,18 +1387,4 @@ class PnSentReceivedNotificationControllerTest {
 				.expectStatus().isNotFound();
 	}
 
-	@Test
-	void getReceivedNotificationAttachmentWithNotificationCancelledTest() {
-		Mockito.doThrow(new PnNotificationNotFoundException("Notification with iun: a-iun has a request for cancellation"))
-				.when(svc)
-				.checkIfNotificationIsNotCancelled(IUN);
-
-		webTestClient.get()
-				.uri("/delivery/notifications/received/{iun}/attachments/payment/{attachmentName}", IUN, "PAGOPA")
-				.header( PnDeliveryRestConstants.CX_ID_HEADER, RECIPIENT_ID)
-				.header(PnDeliveryRestConstants.UID_HEADER, UID)
-				.header(PnDeliveryRestConstants.CX_TYPE_HEADER, "PF")
-				.exchange()
-				.expectStatus().isNotFound();
-	}
 }
